# Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Main.cpp  PluginLoader.cpp  PluginLoader.h
plugins/: CMakeLists.txt  pow.cpp  sin.cpp
